# dig-capsule

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SPEC.md  build.rs
.github/workflows/: ci.yml  publish-npm.yml  release.yml
crates/dig-capsule-chunker/: Cargo.toml
crates/dig-capsule-chunker/src/: boundary.rs  chunk.rs  chunker.rs  config.rs
crates/dig-capsule-chunker/tests/: properties.rs  vectors.rs
crates/dig-capsule-compiler/: Cargo.toml
crates/dig-capsule-compiler/src/: atomic_write.rs  chunk_index.rs  config.rs  data_section.rs  filler.rs  inject.rs  key_table.rs  lib.rs  pipeline.rs  template.rs
crates/dig-capsule-compiler/tests/: auth_policy.rs  chunk_index.rs  compiler_version.rs  data_section_golden.rs  determinism.rs  filler.rs  import_section.rs  inject.rs  key_table.rs  large_data_section.rs  obfuscation.rs  pipeline.rs  secretless.rs  self_serving.rs
crates/dig-capsule-compiler/tests/common/: mod.rs
crates/dig-capsule-core/: Cargo.toml  README.md
crates/dig-capsule-core/src/: abi.rs  capsule.rs  capsule_class.rs  crypto.rs  lib.rs  merkle.rs  tombstone.rs  wire.rs
crates/dig-capsule-core/tests/: abi.rs  bytes.rs  capsule.rs  codec_primitives.rs  codec_structs.rs  config.rs  conventions_paths.rs  datasection.rs  error.rs  keytable.rs  manifest.rs  merkle.rs  section_header.rs  serving.rs  tombstone.rs  urn.rs  urn_conformance.rs  wire_content.rs  wire_proof.rs
crates/dig-capsule-core/tests/fixtures/: urn_conformance.json
crates/dig-capsule-crypto/: Cargo.toml
crates/dig-capsule-crypto/examples/: gen_fixtures.rs
crates/dig-capsule-crypto/src/: aead.rs  bls.rs  fixtures.rs  kdf.rs  lib.rs
crates/dig-capsule-crypto/tests/: aead_roundtrip.rs  bls_fixtures.rs  bls_roundtrip.rs  crypto_error.rs  hash_kat.rs  kdf_kat.rs
crates/dig-capsule-guest/: Cargo.toml
crates/dig-capsule-guest/src/: abi.rs  allocator.rs  attestation.rs  content.rs  datasection.rs  decoy.rs  host.rs  imports.rs  lib.rs  metadata.rs  packing.rs  proof.rs  request.rs  session.rs
crates/dig-capsule-guest/tests/: abi_roundtrip.rs  attest_freshness.rs  attest_nonce.rs  attestation.rs  content_proof.rs  decoy.rs  fixtures.rs  merkle_proof.rs  metadata.rs  mock_host.rs  oblivious.rs  session_jwt.rs  temporal.rs
crates/dig-capsule-host/: Cargo.toml
crates/dig-capsule-host/examples/: verify_served.rs
crates/dig-capsule-host/src/: error.rs  imports.rs  runtime.rs  serve_blind.rs  state.rs  teehook.rs
crates/dig-capsule-host/tests/: bounds.rs  e2e_guest.rs  imports_unit.rs  instantiate.rs  jwks_mock.rs  return_buffer.rs  serve_flow.rs
crates/dig-capsule-prover/: Cargo.toml
crates/dig-capsule-prover/guest/: Cargo.toml
crates/dig-capsule-prover/src/: chain.rs  coinset.rs  commitment.rs  hardware.rs  lib.rs  mock.rs  mock_chain.rs  prover.rs  risc0_backend.rs  serving_inputs.rs
crates/dig-capsule-prover/tests/: chain_freshness.rs  coinset_live.rs  coinset_parse.rs  hardware_attest.rs  mock_roundtrip.rs  node_attribution.rs  nonce_binding.rs  program_hash.rs  public_output.rs  risc0_smoke.rs  roothash_binding.rs  trait_object_safety.rs
crates/dig-capsule-stage/: Cargo.toml  build.rs
crates/dig-capsule-stage/src/: lib.rs
crates/dig-capsule-store/: Cargo.toml
crates/dig-capsule-store/src/: chunkstore.rs  config.rs  diff.rs  error.rs  generation.rs  history.rs  lib.rs  paths.rs  public_manifest.rs  store.rs
crates/dig-capsule-store/tests/: commit_flow.rs  layout.rs
crates/dig-capsule-wasm/: Cargo.toml  PUBLISHED_README.md  README.md  package.json
crates/dig-capsule-wasm/examples/: gen_smoke_fixture.rs
crates/dig-capsule-wasm/scripts/: assemble-pkg.mjs
crates/dig-capsule-wasm/src/: lib.rs
crates/dig-capsule-wasm/tests/: browser.rs  parity.rs  public_manifest.rs
crates/dig-client-wasm/: Cargo.toml  PUBLISHED_README.md  README.md  package.json
crates/dig-client-wasm/scripts/: assemble-pkg.mjs  verify-pkg.mjs
crates/dig-client-wasm/src/: lib.rs
crates/dig-client-wasm/tests/: browser.rs  public_manifest.rs
crates/digstore-compiler/src/: data_section.rs  pipeline.rs
crates/digstore-compiler/tests/: auth_policy.rs  compiler_version.rs  data_section_golden.rs  determinism.rs  large_data_section.rs  obfuscation.rs  pipeline.rs  secretless.rs  self_serving.rs
crates/digstore-core/: Cargo.toml  README.md
crates/digstore-core/src/: datasection.rs  lib.rs  public_manifest.rs
crates/digstore-host/: Cargo.toml
crates/digstore-stage/: build.rs
crates/digstore-stage/src/: lib.rs
crates/digstore-store/src/: lib.rs  public_manifest.rs
examples/: gen_smoke_fixture.rs
guest-risc0/: Cargo.toml.template
runbooks/: dig-capsule.md
src/: lib.rs  wasm_browser.rs
src/imp/: extract.rs  mod.rs  reader.rs
src/imp/chunker/: boundary.rs  chunk.rs  chunker.rs  config.rs  gear.rs  mod.rs
src/imp/compiler/: atomic_write.rs  chunk_index.rs  config.rs  data_section.rs  error.rs  filler.rs  inject.rs  key_table.rs  mod.rs  obfuscate.rs  pipeline.rs  template.rs
src/imp/core/: abi.rs  bytes.rs  capsule.rs  capsule_class.rs  config.rs  crypto.rs  datasection.rs  hash.rs  keytable.rs  manifest.rs  merkle.rs  mod.rs  public_manifest.rs  tombstone.rs  wire.rs
src/imp/crypto/: aead.rs  bls.rs  fixtures.rs  kdf.rs  mod.rs
src/imp/guest/: abi.rs  allocator.rs  attestation.rs  content.rs  datasection.rs  decoy.rs  host.rs  imports.rs  metadata.rs  mod.rs  obfuscation_hooks.rs  packing.rs  proof.rs  request.rs  session.rs  temporal.rs
src/imp/host/: clock.rs  config.rs  error.rs  imports.rs  memory.rs  mod.rs  random.rs  runtime.rs  serve_blind.rs  session.rs  state.rs  teehook.rs
src/imp/prover/: chain.rs  coinset.rs  commitment.rs  error.rs  hardware.rs  mock.rs  mock_chain.rs  mod.rs  prover.rs  risc0_backend.rs  serving_inputs.rs
src/imp/stage/: mod.rs
src/imp/store/: chunkstore.rs  clock.rs  config.rs  diff.rs  error.rs  generation.rs  history.rs  mod.rs  paths.rs  public_manifest.rs  (+2 more)
tests/: browser.rs  parity.rs  public_manifest.rs  reader.rs
wasm-npm/: .gitignore  PUBLISHED_README.md  package.json
wasm-npm/scripts/: assemble-pkg.mjs
(+87 files in other folders)
