[workspace]
resolver = "2"
# The `.dig` store DATA PLANE, lifted from dig-store (epic #744 Phase 1): the DIGS
# format, the compiler (files -> capsule), the capsule read-crypto, staging, and the
# guest/host serve triad. Member crates are named `dig-capsule-*` (Option B naming,
# #1247); each is published to crates.io in topological order (see release.yml).
members = [
  "crates/dig-capsule-core",
  "crates/dig-capsule-chunker",
  "crates/dig-capsule-crypto",
  "crates/dig-capsule-store",
  "crates/dig-capsule-guest",
  "crates/dig-capsule-prover",
  "crates/dig-capsule-host",
  "crates/dig-capsule-compiler",
  "crates/dig-capsule-stage",
]
# `dig-capsule-prover/guest` is the RISC0 zkVM guest (built only under the `risc0`
# feature with the RISC0 toolchain). `dig-capsule-wasm` is the browser read-crypto
# behind `@dignetwork/dig-capsule-wasm`: it is wasm32-only and resolved independently with
# its own Cargo.lock (its `dig-capsule-crypto` -> `chia-bls` -> `blst` C/asm does not
# compile to wasm32), so it is EXCLUDED from the native workspace build.
exclude = ["crates/dig-capsule-prover/guest", "crates/dig-capsule-wasm"]

[workspace.package]
edition = "2021"
version = "0.2.1"
license = "GPL-2.0-only"
repository = "https://github.com/DIG-Network/dig-capsule"

[workspace.dependencies]
sha2 = "0.10"
proptest = "1"
hex = "0.4"

# Internal crates carry BOTH a path (used for in-workspace builds) AND a version
# (used by `cargo publish` — crates.io forbids path-only deps). Members reference
# these via `{ workspace = true }` so the version lives in exactly one place.
# `dig-capsule-compiler` is pinned to 1.0.0 by SPEC §5 (see its Cargo.toml).
dig-capsule-core = { path = "crates/dig-capsule-core", version = "0.2.1" }
dig-capsule-chunker = { path = "crates/dig-capsule-chunker", version = "0.2.1" }
dig-capsule-crypto = { path = "crates/dig-capsule-crypto", version = "0.2.1" }
dig-capsule-store = { path = "crates/dig-capsule-store", version = "0.2.1" }
dig-capsule-guest = { path = "crates/dig-capsule-guest", version = "0.2.1" }
dig-capsule-prover = { path = "crates/dig-capsule-prover", version = "0.2.1" }
dig-capsule-host = { path = "crates/dig-capsule-host", version = "0.2.1" }
dig-capsule-compiler = { path = "crates/dig-capsule-compiler", version = "1.0.0" }

# Release hardening: keep integer-overflow checks ON in release builds. This code
# parses untrusted serialized input and does offset/length arithmetic; silent
# wrapping in release would turn a length-overflow bug into a memory-safety / logic
# hazard. Cost is negligible for this workload. (Carried over from dig-store.)
[profile.release]
overflow-checks = true
debug-assertions = false
panic = "unwind"
