# The ONE `dig-capsule` crate (#1270): the 9 former native `dig-capsule-*` member
# crates + the self-serving guest + the RISC0 guest, collapsed into a single crate
# with one curated public facade (`src/lib.rs`). Consumers (dig-store, dig-node,
# dig-urn-resolver) depend on JUST `dig-capsule`; the internal split lives under the
# `pub(crate) mod imp` tree and is an implementation detail. Only ONE crate publishes
# to crates.io (kills the new-crate topological-publish 429). The `.dig` format bytes,
# the guest ABI, and `COMPILER_VERSION` are UNCHANGED — a pure mechanical collapse.
[package]
name = "dig-capsule"
version = "0.3.0"
edition = "2021"
license = "GPL-2.0-only"
repository = "https://github.com/DIG-Network/dig-capsule"
description = "The DIG Network .dig capsule data plane — one crate over the DIGS format, capsule read-crypto, compiler, staging, and the guest/host serve triad."
readme = "README.md"
keywords = ["dig", "chia", "content-addressed", "capsule", "storage"]
categories = ["cryptography", "encoding", "data-structures"]
# Explicit package file set — a complete, minimal build surface for crates.io. The
# RISC0 guest ships as `guest-risc0/Cargo.toml.template` (+ src): cargo auto-EXCLUDES
# any subdir that holds its own `Cargo.toml` (a nested package), even from `include`,
# so the guest manifest is a `.template` that build.rs job (c) materializes to
# `Cargo.toml` before `embed_methods()` — this keeps the guest sources in the tarball
# so a `--features risc0` build from crates.io can resolve the methods.
include = [
    "src/**/*",
    "build.rs",
    "fixtures/**/*",
    "tests/fixtures/**/*",
    "guest-risc0/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "SPEC.md",
]

[lib]
name = "dig_capsule"
path = "src/lib.rs"
# `rlib` for Rust consumers; `cdylib` so the `guest-wasm` feature can emit the
# wasm32 self-serving guest module (the guest ABI `#[no_mangle]` exports).
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "dighost"
path = "src/bin/dighost.rs"
required-features = ["dighost"]

# ---------------------------------------------------------------------------
# Features — the same two-tier surface the facade documents.
# ---------------------------------------------------------------------------
[features]
default = ["full"]
full = ["crypto", "store", "compile", "serve"]

# `std` lifts the crate out of no_std and enables the canonical URN scheme
# (`dig-urn-protocol` is a std crate) + `chunk::chunk_stream`. Every non-base
# feature implies it.
std = [
  "serde",
  "serde/std",
  "dep:dig-urn-protocol",
  "sha2/std",
  "hex/std",
  "serde_json/std",
]
serde = ["dep:serde"]

crypto = ["std", "dep:chia-bls", "dep:thiserror"]
store = ["std", "crypto", "dep:toml", "dep:thiserror"]
compile = [
  "store",
  "crypto",
  "dep:wasm-encoder",
  "dep:wasmparser",
  "dep:chacha20",
  "dep:wat",
]
serve = [
  "crypto",
  "dep:wasmtime",
  "dep:reqwest",
  "dep:rand",
  "dep:rand_chacha",
  "dep:thiserror",
  # the guest half of the serve triad (compiled as a native rlib here)
  "dep:bls12_381",
  "dep:rsa",
  "dep:p256",
  "dep:sha2_v09",
  "dep:chacha20",
  "dep:base64",
]

# The real RISC0 serving-proof circuit; OFF by default (needs the RISC0 toolchain).
risc0 = ["serve", "dep:risc0-zkvm", "dep:bincode", "dep:risc0-build"]
# TEE-alternative hardware attestation hook (prover residual).
hardware-attest = []

# The wasm32, no_std self-serving guest cdylib (exports the guest ABI). Pulls only
# the guest crypto deps — NO std, NO chia-bls, NO wasmtime.
guest-wasm = [
  "dep:bls12_381",
  "dep:rsa",
  "dep:p256",
  "dep:sha2_v09",
  "dep:chacha20",
  "dep:base64",
]

# The optional `dighost` reference binary (clap/tokio/object_store CLI). Not default,
# so a plain consumer never pulls the CLI/async deps.
dighost = [
  "serve",
  "dep:clap",
  "dep:tokio",
  "dep:object_store",
  "dep:anyhow",
  "dep:url",
  "dep:futures",
]

# ---------------------------------------------------------------------------
# Dependencies. Everything above the no_std+alloc base is OPTIONAL and gated.
# ---------------------------------------------------------------------------
[dependencies]
# --- Always-on no_std + alloc base (former core + chunker). ---
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
# The AES-256-GCM-SIV chunk seal + HKDF derivation (base read-crypto primitives,
# wasm/no_std-clean: `aes-gcm-siv` defaults OFF so it never drags in getrandom).
aes-gcm-siv = { version = "0.11", default-features = false, features = ["aes", "alloc"] }
hkdf = { version = "0.12", default-features = false }

# --- Optional (std / crypto / store / compile / serve / guest-wasm). ---
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
# The canonical DIG URN scheme (std-only). Enabled by `std`.
dig-urn-protocol = { version = "0.1", optional = true }

# crypto
chia-bls = { version = "=0.45.0", optional = true }
thiserror = { version = "1", optional = true }

# store
toml = { version = "0.8", optional = true }

# compile
wasm-encoder = { version = "0.221", features = ["wasmparser"], optional = true }
wasmparser = { version = "0.221", optional = true }
chacha20 = { version = "0.9", optional = true }

# serve (host + prover + native guest rlib)
wasmtime = { version = "45", default-features = false, features = ["std", "cranelift", "runtime", "gc", "gc-drc", "gc-null", "threads", "pooling-allocator", "parallel-compilation"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3", optional = true }

# guest crypto (native rlib under `serve`; wasm32 cdylib under `guest-wasm`)
bls12_381 = { version = "0.8", default-features = false, features = ["alloc", "pairings", "groups", "experimental"], optional = true }
rsa = { version = "0.9", default-features = false, features = ["sha2"], optional = true }
p256 = { version = "0.13", default-features = false, features = ["ecdsa"], optional = true }
# bls12_381 0.8's experimental hash-to-curve is bound to the digest 0.9 trait family,
# so the AugScheme hash-to-G2 expand step uses a sha2 0.9 hasher (aliased); every
# other hash uses sha2 0.10.
sha2_v09 = { package = "sha2", version = "0.9", default-features = false, optional = true }
base64 = { version = "0.22", default-features = false, features = ["alloc"], optional = true }

# risc0 (real ZK backend)
risc0-zkvm = { version = "1.2", optional = true }
bincode = { version = "1", optional = true }

# dighost binary-only deps
clap = { version = "4", features = ["derive"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
object_store = { version = "0.11", features = ["aws"], optional = true }
anyhow = { version = "1", optional = true }
url = { version = "2", optional = true }
futures = { version = "0.3", optional = true }

[build-dependencies]
# compiler wat-template assembly (build job a), gated by `compile`.
wat = { version = "1", optional = true }
# risc0 guest ELF embedding (build job c), gated by `risc0`.
risc0-build = { version = "1.2", optional = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"
httpmock = "0.7"
wat = "1"
rand_core = "0.6"
object_store = { version = "0.11", features = ["aws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

# The RISC0 serving guest (built only under `risc0`, with the RISC0 toolchain). NOT a
# `[dependencies]` path entry (that would make crates.io reject the crate); referenced
# ONLY here + assembled by build.rs job (c) via `risc0_build::embed_methods()`.
[package.metadata.risc0]
methods = ["guest-risc0"]

# Release hardening: keep integer-overflow checks ON in release builds. This code
# parses untrusted serialized input and does offset/length arithmetic; silent
# wrapping in release would turn a length-overflow bug into a memory-safety / logic
# hazard. (Carried over from dig-store.)
[profile.release]
overflow-checks = true
debug-assertions = false
panic = "unwind"
