[package]
name = "dig-capsule-chunker"
license.workspace = true
version.workspace = true
edition.workspace = true
description = "Content-defined FastCDC chunker for the DIG Network .dig store format."
repository.workspace = true

[dependencies]
dig-capsule-core = { path = "../dig-capsule-core" }
sha2 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
hex = { workspace = true }
