[package]
name = "dig-capsule-prover"
license.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
description = "Execution proofs and Chia chain anchoring for dig-capsule (§13)."

[dependencies]
dig-capsule-core = { workspace = true }
dig-capsule-crypto = { workspace = true }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# risc0 backend (real ZK) — all optional, all referenced by the `risc0` feature below
risc0-zkvm = { version = "1.2", optional = true }
dig-capsule-guest-risc0 = { path = "guest", version = "0.2.0", optional = true }
bincode = { version = "1", optional = true }

[build-dependencies]
risc0-build = { version = "1.2", optional = true }

[features]
default = []
risc0 = ["dep:risc0-zkvm", "dep:dig-capsule-guest-risc0", "dep:bincode", "dep:risc0-build"]
hardware-attest = []

[dev-dependencies]
serde_json = "1"
httpmock = "0.7"

[package.metadata.risc0]
methods = ["guest"]
