[package]
name = "dig-capsule-store"
license.workspace = true
version.workspace = true
repository.workspace = true
description = "Generation, history, staging, and diff for the DIG Network .dig store (chunkstore + public manifest)."
edition.workspace = true

[dependencies]
dig-capsule-core = { path = "../dig-capsule-core" }
dig-capsule-chunker = { path = "../dig-capsule-chunker" }
dig-capsule-crypto = { path = "../dig-capsule-crypto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
