[package]
name = "dig-capsule-store"
license.workspace = true
version.workspace = true
repository.workspace = true
description = "Generation, history, staging, and diff for the DIG Network .dig store (chunkstore + public manifest)."
edition.workspace = true

[dependencies]
dig-capsule-core = { workspace = true }
dig-capsule-chunker = { workspace = true }
dig-capsule-crypto = { workspace = true }
dig-urn-protocol = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
